update about page

--- a/index.html
+++ b/index.html
@@ -223,12 +223,14 @@
                     <div class="container">
                         <div class="tokyo_tm_about">
                             <div class="about_image">
-                                <img src="https://d33wubrfki0l68.cloudfront.net/1de470392466be9c3dfa6651ebab938290d07f15/06f37/assets/img/slider/1.jpg"
-                                    alt="Adriano Smith & <span>Photographer</span>" />
-                                <div class="main" data-img-url="/assets/img/slider/1.jpg"></div>
+                                <img src="/assets/img/slider/about_p.jpeg"
+                                    alt="AI programmer" />
+                                <div class="main" data-img-url="/assets/img/slider/about_p.jpeg">
+
+                                </div>
                             </div>
                             <div class="description">
-                                <h3 class="name">Adriano Smith & <span>Photographer</span></h3>
+                                <h3 class="name">AI programmer & <span>Teacher</span></h3>
                                 <div class="description_inner">
                                     <div class="left">
 
@@ -242,19 +244,17 @@
                                     <div class="right">
                                         <ul>
                                             <li>
-                                                <p><span>Birthday:</span>01.07.1990</p>
+                                                <p><span>Birthday:</span>25.10.1999</p>
                                             </li>
                                             <li>
                                                 <p><span>Age:</span>24</p>
                                             </li>
+                                            
                                             <li>
-                                                <p><span>Address:</span>Ave 11, New York, USA</p>
+                                                <p><span>Email:</span><a href="#">ftm.zamanian.1999@gmail.com</a></p>
                                             </li>
                                             <li>
-                                                <p><span>Email:</span><a href="#">besco@gmail.com</a></p>
-                                            </li>
-                                            <li>
-                                                <p><span>Phone:</span><a href="#">+77 022 177 05 05</a></p>
+                                                <p><span>Phone:</span><a href="#">+989 376 331 473</a></p>
                                             </li>
                                             <li>
                                                 <p><span>Study:</span>Ferdowsi University of Mashhad</p>
@@ -283,33 +283,13 @@
                             <div class="my_box">
                                 <div class="left">
                                     <div class="about_title">
-                                        <h3>Photography Skills</h3>
+                                        <h3>Computer Skills</h3>
                                     </div>
                                     <div class="tokyo_progress">
 
-                                        <div class="progress_inner" data-value="95">
-                                            <span><span class="label">Wedding Photography</span><span
-                                                    class="number">95%</span></span>
-                                            <div class="background">
-                                                <div class="bar">
-                                                    <div class="bar_in"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="progress_inner" data-value="85">
-                                            <span><span class="label">Lifestyle Photography</span><span
-                                                    class="number">85%</span></span>
-                                            <div class="background">
-                                                <div class="bar">
-                                                    <div class="bar_in"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="progress_inner" data-value="90">
-                                            <span><span class="label">Family Photography</span><span
-                                                    class="number">90%</span></span>
+                                        <div class="progress_inner" data-value="80">
+                                            <span><span class="label">Python programming</span><span
+                                                    class="number">80%</span></span>
                                             <div class="background">
                                                 <div class="bar">
                                                     <div class="bar_in"></div>
@@ -325,36 +305,15 @@
                                     </div>
                                     <div class="tokyo_progress">
 
-                                        <div class="progress_inner" data-value="95">
+                                        <div class="progress_inner" data-value="60">
                                             <span><span class="label">English</span><span
-                                                    class="number">95%</span></span>
+                                                    class="number">60%</span></span>
                                             <div class="background">
                                                 <div class="bar">
                                                     <div class="bar_in"></div>
                                                 </div>
                                             </div>
                                         </div>
-
-                                        <div class="progress_inner" data-value="95">
-                                            <span><span class="label">Japanese</span><span
-                                                    class="number">85%</span></span>
-                                            <div class="background">
-                                                <div class="bar">
-                                                    <div class="bar_in"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-
-                                        <div class="progress_inner" data-value="95">
-                                            <span><span class="label">Arabic</span><span
-                                                    class="number">90%</span></span>
-                                            <div class="background">
-                                                <div class="bar">
-                                                    <div class="bar_in"></div>
-                                                </div>
-                                            </div>
-                                        </div>
-
                                     </div>
                                 </div>
                             </div>
@@ -365,25 +324,25 @@
                                 <ul>
                                     <li>
                                         <div class="list_inner">
-                                            <h3>777+</h3>
+                                            <h3>1+</h3>
                                             <span>Projects Completed</span>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="list_inner">
-                                            <h3>3k+</h3>
+                                            <h3>0+</h3>
                                             <span>Happy Clients</span>
                                         </div>
                                     </li>
                                     <li>
                                         <div class="list_inner">
-                                            <h3>9k+</h3>
+                                            <h3>2k+</h3>
                                             <span>Lines of Code</span>
                                         </div>
                                     </li>
                                 </ul>
                             </div>
-                            <div class="partners">
+                            <!-- <div class="partners">
                                 <div class="about_title">
                                     <h3>Our Partners</h3>
                                 </div>
@@ -422,7 +381,7 @@
                                                 alt="Eight" /></a></li>
 
                                 </ul>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
